# ml_workbench

./: .gitignore  Pipfile  README.md  aqsn_architecture.drawio  aqsn_architecture.excalidraw  ml_workflow.py  model.keras  models.py  pyproject.toml  requirements.txt  run.py  run_1.py  run_2.py  utils.py  visualization.py
.github/workflows/: python-app.yml
app/: csv_loader.py  data_processor.py  get_config.py  model_evaluation.py  utils.py
app/database/: Influx_db_connector.py  database_config.yaml  influx_buckets.py  influx_query_builder.py  sensors.py
app/machine_learning/: CSV_data_loader.py  PytorchModels.py  models_basic.py  models_pytorch.py  sensors.py  workflows.py
app/test/: test_get_config.py  test_influx_db_connector.py  test_influx_query_builder.py  test_utils.py
data/: DEBW015_20241211-202241228.csv  minute_data_lubw.csv
database/: Influx_db_connector.py  database_adapter.py  database_connector.py  influx_buckets.py  influx_query_builder.py
lubw/: LUBWDataFetcher.py  lubw_config.yaml
models/: database_workflow_1.keras  feedforward_model.keras  model.keras
test/: database_config.yaml  test_csv_loader.py  test_data_processor.py  test_database_adapter.py  test_database_connector.py  test_get_config.py  test_influx_db_connector.py  test_influx_query_builder.py  test_utils.py  utils_unittests.py
test/database/: test_influx_db_connector.py  test_influx_query_builder.py
test/ressources/: test.csv
workflows/: run_1.py  run_2.py  sont_c_1.py  sont_c_2.py  sont_c_3.py
workflows/database_workflow_1/: database_workflow_1.py  katja.py  workflow_config.yaml
workflows/sont_a_1/: sont_a_1.py  workflow_config.yaml
workflows/sont_c_1/: sont_c_1.py  workflow_config.yaml
workflows/sont_c_2/: sont_c_2.py  workflow_config.yaml
workflows/sont_c_3/: sont_c_3.py
workflows/use_model_on_future_data/: model_on_future_data.py  workflow_config.yaml
(+161 files in other folders)
