[project]
name = "ml-workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "influxdb-client>=1.49.0",
    "isort>=8.0.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.0",
    "mypy>=1.20.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pip-audit>=2.10.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "ruff>=0.15.12",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "ual",
    "xgboost>=3.1.0",
]

[tool.uv.sources]
ual = { git = "https://github.com/urban-air-lab/common" }
