[project]
name = "ml-workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "influxdb-client>=1.50.0",
    "isort>=8.0.1",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "mypy>=1.20.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.12",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "ual",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
ual = { git = "https://github.com/urban-air-lab/common" }
